# cli_based_rag

./: .gitignore  README.md  hello.txt  main.py  pyproject.toml  test.md
data/: hi.txt
